--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,8 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+/* Agregado para cambiar el color de texto de los inputs a negro */
+input {
+  color: black;
+}
